--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,10 @@ ul {
 header {
     background-color: #FFF;
     grid-area: header;
+    filter: drop-shadow(0px 0px 5px hsl(0deg 0% 0% / 0.38));
+    padding: 1rem 2rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
 
 .sidebar {
