--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,8 @@ header {
     color: #FFF;
     padding: 2rem;
     display: grid;
+    grid-template-rows: repeat(3, min-content);
+    gap: 4rem;
 }
 
 .sidebar img {
