--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
     margin: 0;
 }
 
+img, picture, video, canvas, svg {
+    display: block;
+}
+
 html {
     height: 100%;
 }
@@ -26,14 +30,10 @@ body {
     "sidebar header"
     "sidebar main";
     grid-template-rows: 1fr 2fr;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 4fr;
     font-family: "Roboto", sans-serif;
 }
 
-img, picture, video, canvas, svg {
-    display: block;
-    max-width: 100%;
-}
   
 input, button, textarea, select {
     font: inherit;
@@ -64,7 +64,7 @@ header {
     padding: 0 2rem 2rem 2rem;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    gap: 2rem;
+    font-weight: bold;
 }
 
 header .top {
@@ -121,10 +121,9 @@ header .bottom {
 
 header .bottom .left {
     display: grid;
-    grid-template-columns: max-content max-content;
+    grid-template-columns: 1fr 4fr;
     gap: 1rem;
     align-items: center;
-    font-weight: bold;
 }
 
 header .bottom .left .welcome-message {
@@ -152,7 +151,6 @@ header .bottom .right {
 header .bottom .right button {
     background-color: var(---primary-color);
     color: #FFF;
-    font-weight: bold;
     padding: .5rem .2rem;
     border: 0;
     border-radius: 20rem;
@@ -185,8 +183,9 @@ header .bottom .right button {
 
 .sidebar li, .sidebar .logo {
     display: grid;
-    grid-template-columns: max-content max-content;
+    grid-template-columns: 1fr 4fr;
     gap: 1rem;
+    align-items: center;
 }
 
 main {
