Create the main area grid

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     grid-template-areas: 
     "sidebar header"
     "sidebar main";
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 3fr;
     grid-template-columns: 1fr 4fr;
     font-family: "Roboto", sans-serif;
 }
@@ -193,4 +193,24 @@ header .bottom .right button {
 main {
     background-color: var(--grey-color);
     grid-area: main;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+    "projects announcements"
+    "projects trending";
+    gap: 1rem;
+    padding: 2rem 1rem;
+}
+
+.projects {
+    grid-area: projects;
+}
+
+.announcements {
+    grid-area: announcements;
+}
+
+.trending {
+    grid-area: trending;
 }
