--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     grid-template-areas: 
     "sidebar header"
     "sidebar main";
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: minmax(fit-content, 1fr) 4fr;
     grid-template-columns: 1fr 4fr;
     font-family: "Roboto", sans-serif;
 }
